--- a/src/components/forms/Forms.module.css
+++ b/src/components/forms/Forms.module.css
@@ -1,8 +1,24 @@
-form[name="add"] {
+.form form[name="filter"] {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 400px;
 }
 input {
   padding: 3px 5px;
   margin-bottom: 5px;
+}
+button {
+  background: none;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: 1px solid teal;
+  padding: 5px;
+  width: 150px;
+  margin: 0 auto;
+  height: 30px;
+  margin-bottom: 10px;
+}
+select {
+  height: 25px;
 }
