--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,7 @@
 $red: #ff0000;
 $green: #00ff00;
 $blue: #0e80b0;
+@mixin border($rad: 5px, $color: $green) {
+  border: 2px solid $color;
+  border-radius: $rad;
+}
